Package: aroma.light
====================

Version: 1.3.0 [2006-10-xx]
o The devel version number was bumped up with the Bioconductor release.

Version: 1.2.0 [2006-10-03]
o The version number was bumped up with the Bioconductor release.

Version: 1.1.0 [2006-07-20]
o Added to Bioconductor v1.9.
o Added some trial RSP pages. Try browseRsp() in the R.rsp package.

Version: 0.1.7 [2006-06-27]
o Made the package truely standalone except from R.oo.  Previously package
  R.basic was used in some of the examples.

Version: 0.1.6 [2006-05-22]
o Added a namespace for the package.
o Added 'biocViews' since the package will eventually be added 
  to the Bioconductor project.
o Added medianPolish() which is much faster than stats::medpolish()
  when there are no NA.
o Added plotDensity() for list of vectors as well as for matrices.
o Added normalizeQuantile() for lists of vectors as well as for a
  single vector of numerics.  To calculate the target quantile there
  is a new function averageQuantile(), which is also for lists of 
  vectors.  It latter does not support robust estimatation of the 
  average, because it safes memory.
o Updated normalizeQuantile() for matrices according to the updates
  in the limma package.

Version: 0.1.5 [2006-04-21]
o Minor speedup to weightedMedian(), e.g. negative weights do no longer give
  and error, but are treated as zero instead.  This removes some overhead
  of the function.  Also, if it is known that there are no NAs that can be
  specified by na.rm=NA, which will skip NA checks.

Version: 0.1.4 [2006-03-28]
o Updated broken Rd links.
o Updated the references to publications.

Version: 0.1.3 [2006-01-22]
o Added help on the returned parameters of fitIWPCA().
o Now fitIWPCA() does not return the data matrix. This is to save memory.
  The calling algorithm can equally well add the data if it is needed.

Version: 0.1.2 [2005-09-06]
o All plot methods displaying log-ratios now assures that no fake